move in & out animation mobile fix

--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -294,10 +294,10 @@
 
   @-webkit-keyframes in {
     50% {
-      transform: translateX(50px);
+      transform: translateX(-50px);
     }
     100% {
-      transform: translateX(-50px);
+      transform: translateX(-100px);
     }
   }
   @keyframes in {
